# mozichem-ai

./: .gitignore  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt
examples/: create-agent.py  create-api.py  launch.py  mcp-config-1.yml  mozichem-mcp-servers.json  sample-mcp-servers.json  tavily-mcp-servers.json
mozichem_ai/: __init__.py  app.py
mozichem_ai/agents/: __init__.py  main.py  mcp_manager.py  mozichem_agent.py
mozichem_ai/api/: ai_api.py  app.py  config_api.py  llm.py  main.py
mozichem_ai/config/: __init__.py  constants.py  settings.py
mozichem_ai/docs/: core.py
mozichem_ai/llms/: __init__.py  llm_models.py
mozichem_ai/memory/: __init__.py  config_memory.py
mozichem_ai/models/: __init__.py  api.py  chat.py  llm.py  mcp.py
mozichem_ai/ui/browser/: index.html  main-GFLQ7RGP.js  main-N2YZHBW3.js  main-OL4Z5AV2.js  main-P4CXXPNI.js  main-RVP4MS7G.js  styles-F3MU33UU.css  styles-VKLEA4UG.css
mozichem_ai/utils/: __init__.py  loader.py  message_manager.py
tests/: test0.py  test1.py  test2.py
