[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mozichem-ai"
version = "0.1.0"
description = "MoziChem-AI brings powerful analysis tools to your browser with AI-driven workflows."
authors = [
    { name = "Sina Gilassi", email = "sina.gilassi@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi[standard]>=0.115.14",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.18",
    "langchain-google-genai>=2.1.8",
    "langchain-openai>=0.3.27",
    "langchain-mcp-adapters>=0.1.8",
    "langgraph>=0.6.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
    "websockets>=15.0.1",
]

[project.urls]
Homepage = "https://github.com/sinagilassi/mozichem-ai"


[tool.setuptools.packages.find]
where = ["."]
include = ["mozichem_ai*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
"mozichem_ai" = [
    "config/*.yml",
    "data/*.csv",
    "ui/**/*",
    "ui/browser/*",
    "ui/browser/assets/**/*"
]

# Include all data files from MANIFEST.in
[tool.setuptools]
include-package-data = true

